ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.local  # local mapping
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails-budget-app-service  # Rails app's service
                port:
                  number: 80  # The port the service is exposing
